# newsjall

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: main.py
src/auth/: dependencies.py  exceptions.py  router.py  schemas.py  security.py  service.py
src/core/: config.py  database.py
src/feeds/: models.py
src/health/: router.py  schemas.py
src/shared/: models.py
src/users/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
tests/: conftest.py  factories.py  test_ping.py
tests/auth/: test_integration.py
tests/health/: test_health_status.py  test_router.py
tests/users/: test_integration.py  test_router.py
