[project]
name = "newsjall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]


[tool.mypy]
plugins = ["pydantic.mypy"]
