[project]
name = "newsjall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "pwdlib[argon2]>=0.3.0",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "asyncpg>=0.31.0",
    "ipdb>=0.13.13",
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "testcontainers[postgres]>=4.14.2",
]


[tool.mypy]
plugins = ["pydantic.mypy"]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "possibly-undefined",
    "explicit-override",
    "ignore-without-code",
    "unused-awaitable",
]


[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = false


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
