[project]
name = "newsjall"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "asyncpg>=0.31.0"
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.20.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.11",
    "testcontainers[postgres]>=4.14.2",
]


[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin",
]
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
enable_error_code = [
    "redundant-expr",
    "truthy-bool",
    "possibly-undefined",
    "explicit-override",
    "ignore-without-code",
    "unused-awaitable",
]


[[tool.mypy.overrides]]
module = "testcontainers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
warn_return_any = false

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]
respect-gitignore = true

[tool.ruff.lint]
select = [
    "E",   # erros do pycodestyle
    "W",   # avisos do pycodestyle
    "F",   # pyflakes
    "I",   # isort (imports)
    "N",   # pep8-naming
    "UP",  # pyupgrade (sintaxe moderna)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking (imports de tipo)
]

ignore = [
    "E501",  # linha muito longa, o formatador vai lidar com isso
    "B008",  # reclama de Depends(...)
]
# Regras que podem ser corrigidas automaticamente
fixable = ["ALL"]

# Regras que NÃO devem ser corrigidas
unfixable = ["S"]  # flake8-bandit

per-file-ignores = {
    "__init__.py" = ["F401", "D104"],  # imports não usados em __init__ são comuns
    "tests/**/*.py" = ["D", "S", "TCH"],  # testes não precisam de docstrings
}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
preview = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
